# docker_pdm_demo

./: .env  Dockerfile  Dockerfile.db  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  schema.sql  test.db  test.py
.devcontainer/: devcontainer.json
src/: db_setup.py
src/db/: db.py
src/de_pdm/: __init__.py
