[project]
name = "de_pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "A", email = "A"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "requests>=2.32.3",
    "pandas>=2.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
